# oprofiler

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: jvm.rs  lib.rs  model.rs  platform.rs  protocol.rs
crates/core/src/proto/: com.openprofiler.protocol.rs  mod.rs
crates/jvmti-agent/: Cargo.toml
crates/jvmti-agent/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  benchmark.rs  call_tree.rs  event.rs  format.rs  lib.rs  main.rs  render.rs
docs/: architecture.md  release.md
java-agent/: pom.xml
java-agent/src/main/java/com/openprofiler/agent/: Agent.java  AgentConstants.java  JavaAgent.java  JdbcProbes.java  Profiler.java  ProfilingClassFileTransformer.java  ProfilingClassVisitor.java  ProfilingMethodVisitor.java  SqlHotSpots.java  TcpServer.java
java-agent/src/main/java/com/openprofiler/benchmark/: LargeLoopBenchmark.java  OverheadBenchmark.java  StandaloneBenchmark.java
proto/: oprofiler_protocol.proto
tools/: AttachAgent.java  package-release.ps1
