[workspace]
members = [
    "crates/core",
    "crates/tui",
    "crates/jvmti-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
arboard = { version = "3", default-features = false }
chrono = "0.4"
crossterm = "0.29"
prost = "0.14"
ratatui = "0.30"
