[package]
name = "jvmti-agent-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
jvmti = "0.5"
log = "0.4"
env_logger = "0.11"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_WindowsProgramming"] }
