[package]
name = "oprofiler-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for the OpenProfiler Java profiling agent."

[lib]
name = "openprofiler_tui"
path = "src/lib.rs"

[[bin]]
name = "oprofiler-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
chrono.workspace = true
crossterm.workspace = true
openprofiler-core = { path = "../core" }
prost.workspace = true
ratatui.workspace = true
